# telegram-engl-bot

./: .dockerignore  .gitignore  Dockerfile  bot.py  help.txt  main.py  pyproject.toml  sentences.py
