[tool.poetry]
name = "telegram-engl-bot"
version = "0.1.0"
description = ""
authors = ["Mykola Filippenko <mykolafilippenko@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_engl_bot"}]

[tool.poetry.dependencies]
python = "3.10.6"
beautifulsoup4 = "4.11.1"
bs4 = "0.0.1"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
idna = "3.4"
requests = "2.28.1"
soupsieve = "2.3.2.post1"
urllib3 = "1.26.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
